# software-engineering-azav-de

./: .gitignore  Installation-Windows.md  README.md
Folien/Html/Code-Along/01 Einführung in Software Engineering und Kursüberblick/: 02 Die Rolle des Software Engineers.html  03 Überblick über den Kurs.html  06 Installation von VS Code.html  07 Was ist Git.html  08 Installation von Git.html
Folien/Html/Code-Along/02 Einführung in die verwendete Entwicklungsumgebung/: 01 Editoren und Entwicklungsumgebungen.html  03 Erstellen eines ersten Projekts (Teil 1).html  04 Erstellen eines ersten Projekts (Teil 2).html  05 Arbeiten mit Jupyter Notebooks.html  05 Verwendung von Jupyter Notebooks.html
Folien/Html/Code-Along/03 Versionskontrolle mit Git und Kommandozeilennutzung/: 01 Die Windows Kommandozeile.html  01 Git Grundlagen.html  02 Python von der Kommandozeile nutzen.html  03 Git Grundlagen (Teil 1).html  04 Ausführen von Python.html  04 Die Kommandozeile.html  04 Git Grundlagen (Teil 2).html  05 Git Grundlagen (Teil 3).html  06 Git Branching (Teil 1).html  07 Git Branching (Teil 2).html  08 Git Branching (Teil 3).html  10 Git in VS Code.html  11 Git Best Practices.html  12 Kursmaterialien.html
Folien/Html/Code-Along/04 Syntax und grundlegende Datentypen/: 01 Ausführen von Programmen.html  02 Grundlegende Datentypen.html  03 Zahlen und Mathematik.html  04 Variablen.html  04 Zahlen und Mathematik.html  05 Variablen (Teil 2).html  05 Variablen.html  06 Vordefinierte Funktionen.html  07 Boolesche Werte.html  07 Vordefinierte Funktionen.html  08 Boolesche Operatoren.html  09 Zusicherungen (Assertions).html  10 String-Interpolation.html
Folien/Html/Code-Along/05 Kontrollstrukturen und Funktionen/: 01 Funktionen.html  01 If-Anweisungen.html  01 Listen.html  02 For-Schleifen.html  02 Funktionen (Teil 2).html  03 Elif Klauseln.html  03 Funktionen (Teil 3).html  03 Ranges.html  04 Beliebig viele Funktionsargumente.html  04 Kontrollstrukturen.html  05 Kontrollstrukturen.html  05 Listen.html  06 For-Schleifen.html  07 For-Schleifen.html  07 Funktionen.html  08 Ranges.html  09 Funktionen (Teil 3).html  09 String-Interpolation.html  10 Import von Modulen.html  10 Typannotationen.html  12 Import von Modulen.html
Folien/Html/Code-Along/06 Sequenzen/: 01 Operationen auf Listen.html  02 Eigenschaften von Listen.html  03 Identität von Objekten.html  04 Tupel.html  05 Eigenschaften von Tupeln.html  06 Kontrollstrukturen (Teil 2).html  07 Truthiness.html  08 Kontrollstrukturen (Teil 3).html  09 Benutzereingaben.html  10 Mehr zu For-Schleifen.html  11 Aufzählen von Elementen.html  12 Iterations-Muster (Teil 1).html  13 Iterations-Muster (Teil 2).html  14 Iterations-Muster (Teil 3).html
Folien/Html/Code-Along/07 Weitere Datenstrukturen/: 01 Dictionaries.html  02 Iteration über Dictionaries.html  03 Mengen.html
Folien/Html/Code-Along/07 Weitere Datenstrukturen und Reguläre Ausdrücke/: 01 Dictionaries.html  02 Iteration über Dictionaries.html  03 Mengen.html  04 Reguläre Ausdrücke.html  05 Zeichenklassen und Quantoren.html  06 Gruppen, Ersetzen und Fortgeschrittenes.html
Folien/Html/Code-Along/08 Fehlerbehandlung/: 01 Einführung in die Fehlerbehandlung.html  02 Ausnahmen (Exceptions).html  03 Fehlerbehandlung.html  04 Propagation von Exceptions.html  05 Aufräumarbeiten mit Finally.html  07 Benutzerdefinierte Exceptions.html
Folien/Html/Code-Along/08 Klassen, Objekte und Methoden/: 01 Typen vs. Instanzen.html  02 Umwandlung in Strings.html  03 Klassen.html  04 Methoden.html
Folien/Html/Code-Along/09 Objektmodell und Magic Methods/: 01 Das Python Datenmodell.html  02 Dataclasses.html  03 Unveränderliche Dataclasses.html  04 Initialisierung von Dataclasses.html  05 Properties.html  06 Setter für Properties.html
Projekte/CliTools/: .bumpversion.cfg  README.md  pyproject.toml
Projekte/CliTools/src/cli_tools/: __main__.py  my_cat.py  my_ls.py
Projekte/CliTools/src/cli_tools/notes/: note.py  notes_app.py
Projekte/CliTools/test_dir/: file-1.txt  file-2.md  utils.cpp
Projekte/CliTools/tests/: test_main.py  test_my_cat.py  test_my_ls.py  test_note_dataclasses.py  test_notes_app_integration.py  utils.py
Projekte/CrazyEights/: .bumpversion.cfg  README.md  pyproject.toml  tox.ini
Projekte/CrazyEights/src/crazyeights/: __init__.py  __main__.py  deck.py  game.py  notifier.py  player.py
Projekte/CrazyEights/src/crazyeights/ai/: notifier.py  player.py
Projekte/CrazyEights/src/crazyeights/interactive/: notifier.py  player.py
Projekte/CrazyEights/tests/: game_test.py  main_test.py
Projekte/CrazyEightsSimple/: README.md  pyproject.toml  tox.ini
Projekte/CrazyEightsSimple/src/crazyeights_simple/: __main__.py  deck.py  game.py  player.py
Projekte/CrazyEightsSimple/tests/: main_test.py
Projekte/CrazyEightsSk/: .bumpversion.cfg  README.md  pyproject.toml  tox.ini
Projekte/CrazyEightsSk/src/crazyeights_sk/: __init__.py  __main__.py  deck.py  game.py  player.py
Projekte/CrazyEightsSk/tests/: main_test.py
Projekte/GitExample/: README.md
Projekte/GitExample/data/: output.csv
Projekte/GitExample/docs/: api.md  index.md
Projekte/GitExample/main/: app.py  utils.py
Projekte/GitExample/tests/: test_app.py  test_utils.py
Projekte/GraspAdventure/: pyproject.toml
Projekte/JsonMenuApp/: LICENSE  README.md  pyproject.toml  tox.ini
Projekte/JsonMenuApp/data/: menu-config.json  menu-german.json  menu-minimal.json  menu-reorganized.json
Projekte/JsonMenuApp/src/json_menu_app/: __init__.py  __main__.py  actions.py  app.py  menu_config.py
Projekte/JsonMenuApp/tests/: menu_config_test.py
Projekte/ShoppingList/: pyproject.toml  tox.ini
Projekte/ShoppingListPytest/: pytest.ini
Projekte/ShoppingListPytestSK/: pyproject.toml
Projekte/ShoppingListStarterKit/: pyproject.toml
Projekte/SimplePackaging/: README.md  pyproject.toml  tox.ini
Projekte/SimplePytest/: pyproject.toml  pytest.ini
Projekte/SimplePytestStarterKit/: pyproject.toml
Projekte/TicTacToe/: README.md  pyproject.toml  tox.ini
Projekte/TicTacToe/src/ttt/: __main__.py  tictactoegame.py
(+1066 files in other folders)
