[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "cli_tools"
version = "0.0.1"
description = "Some command-line utilities using Typer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Dr. Matthias Hölzl", email = "tc@xantira.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "typer~=0.16.0",
    "platformdirs>=4.3.8",
]

[project.urls]
Homepage =  "https://github.com/hoelzl/CliTools/"
"Bug Tracker" = "https://github.com/hoelzl/CliTools/issues"

[project.scripts]
cli-tools = "cli_tools.__main__:main"
my-cat = "cli_tools.my_cat:cat"
my-ls = "cli_tools.my_ls:ls"
my-notes = "cli_tools.notes.notes_app:app"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "tox>=4.25.0",
    "bump2version>=1.0.1",
    "typeshed>=1.0",
]
