[build-system]
requires = ["setuptools>=80.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crazyeights_sk"
version = "0.0.1"
description = "Starter Kit for the Crazy Eights workshop"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = ["attrs>=23.1", "cattrs>=23.1", "click>=8.0", "platformdirs>=1.4"]

[[project.authors]]
name = "Dr. Matthias Hölzl"
email = "tc@xantira.com"

[project.urls]
Homepage = "https://github.com/hoelzl/python-courses/"
"Bug Tracker" = "https://github.com/hoelzl/python-courses/issues"

[project.scripts]
crazy-eights-sk = "crazyeights_sk.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "tox>=4.0.0",
    "bump2version>=1.0.0",
]
