[build-system]
requires = ["setuptools>=80.4.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "json_menu_app"
version = "0.1.0"
description = "A simple text editor with JSON-configured menus."
readme = "README.md"
requires-python = ">=3.10"
license = "ISC"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = []

[[project.authors]]
name = "Dr. Matthias Hölzl"
email = "tc@xantira.com"

[project.urls]
Homepage = "https://github.com/hoelzl/python-programmierer"
"Bug Tracker" = "https://github.com/hoelzl/python-programmierer/issues"

[project.scripts]
json-menu-app = "json_menu_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
