[build-system]
requires = ["setuptools>=80.4.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "shopping_list"
version = "0.0.2"
description = "A simple shopping list."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = []

[[project.authors]]
name = "Dr. Matthias Hölzl"
email = "tc@xantira.com"

[project.urls]
Homepage = "https://github.com/hoelzl/python-programmierer"
"Bug Tracker" = "https://github.com/hoelzl/python-programmierer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
