[build-system]
requires = ["setuptools>=80.4.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "simple-pytest-sk"
version = "0.0.1"
description = "Simple examples for pytest"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = []

[[project.authors]]
name = "Dr. Matthias Hölzl"
email = "tc@xantira.com"

[project.urls]
Homepage = "https://github.com/hoelzl/simple-pytest-sk"
"Bug Tracker" = "https://github.com/hoelzl/simple-pytest-sk/issues"

[project.scripts]
simple-pytest = "simple_pytest_sk.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
